# analysis-stock

./: .editorconfig  .gitignore  .mcp.json  README.md  docker-compose.yml
server/: .env.dev  .env.example  .env.prod  .env.staging  Dockerfile  pyproject.toml  requirements.txt
server/alembic/: env.py
server/alembic/versions/: 001_initial_schema.py  002_index_optimization.py  003_v1_7_2fa_session.py
server/app/: main.py
server/app/core/: config.py  database.py  deps.py  encryption.py  exceptions.py  metrics.py  mongodb.py  pubsub.py  rate_limiter.py  redis.py  redis_keys.py  security.py
server/app/documents/: __init__.py  audit_logs.py  candle_data.py  news_data.py  notifications.py  trading_logs.py
server/app/middleware/: correlation_id.py  error_handler.py  rate_limit.py
server/app/models/: __init__.py  coin.py  exchange.py  trading.py  user.py
server/app/repositories/: client_repository.py  social_account_repository.py  user_repository.py
server/app/schemas/: auth.py  common.py  error.py  health.py  session.py  social_auth.py  two_factor.py
server/app/seeds/: coins.py
server/app/services/: ai_cache_service.py  audit_service.py  auth_cache_service.py  auth_service.py  email_service.py  jwks_cache_service.py  market_cache_service.py  oauth_verification_service.py  session_service.py  social_auth_service.py  two_factor_service.py
server/app/ws/: subscribers.py
server/migrations/mongo/: runner.py
server/tests/: conftest.py  test_correlation_id.py  test_error_handler.py  test_middleware_chain.py
server/tests/integration/: conftest.py  (+8 more)
(+63 files in other folders)
